--- a/src/css/form/OjSwitch.css
+++ b/src/css/form/OjSwitch.css
@@ -1,6 +1,4 @@
 .OjSwitch.OjInput {
-    width: 50px;
-    height: 30px;
     min-height: 30px;
     background: none;
     border: none;
@@ -26,22 +24,12 @@
         box-shadow:         none;
     }
         .OjSwitch.OjInput > .wrapper > .psuedoInput {
-            width: 50px;
-            height: 30px;
+            min-width: 50px;
+            height: 100%;
+            min-height: 30px;
 
             background: transparent;
-
-            -webkit-border-radius: 15px;
-            -moz-border-radius: 15px;
-            border-radius: 15px;
-
-            border: 1px solid;
-        }
-        .OjSwitch.OjInput.off > .wrapper > .psuedoInput {
-            border-color: #DDD
-        }
-        .OjSwitch.OjInput.on > .wrapper > .psuedoInput {
-            border-color: #22c064
+            border: none;
         }
             .OjSwitch > .wrapper > .psuedoInput .slider {
                 display: block;
@@ -50,10 +38,22 @@
                 top: 0px;
                 left: 0px;
 
-                width: 100%;
-                height: 100%;
+                width: 50px;
+                height: 30px;
+
+                -webkit-border-radius: 15px;
+                -moz-border-radius: 15px;
+                border-radius: 15px;
+
+                border: 1px solid;
 
                 overflow: visible;
+            }
+            .OjSwitch.OjInput.off > .wrapper > .psuedoInput .slider {
+                border-color: #DDD;
+            }
+            .OjSwitch.OjInput.on > .wrapper > .psuedoInput .slider {
+                border-color: #22C064;
             }
                 .OjSwitch > .wrapper > .psuedoInput .slider .prefix_lbl,
                 .OjSwitch > .wrapper > .psuedoInput .slider .suffix_lbl {
