--- a/src/css/window/OjModal.css
+++ b/src/css/window/OjModal.css
@@ -1,6 +1,3 @@
-
-
-
 .OjView > .OjNavStack {
     position: absolute;
 
@@ -112,7 +109,11 @@
         .OjModal.no-buttons > .pane > .content {
             bottom: 0px;
         }
-            .OjModal > .pane > .content > .OjView {
+            /* its this specific to override previous style */
+            .OjComponent.OjAlert.OjModal > .pane > .content > .OjView {
+                margin: 0px;
+                padding: 0px;
+
                 max-width: 100%;
                 max-height: 100%;
 
